<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/org.gcs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <org.gcs.widgets.spinners.SpinnerSelfSelect
        android:id="@+id/spinnerWaypointType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:entries="@array/ExampleWaypointType" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <org.gcs.widgets.SeekBarWithText.SeekBarWithText
                android:id="@+id/altitudeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                custom:inc="5"
                custom:max="1000"
                custom:min="0"
                custom:title="@string/waypoint_altitude"
                custom:unit="m" >
            </org.gcs.widgets.SeekBarWithText.SeekBarWithText>

            <org.gcs.widgets.SeekBarWithText.SeekBarWithText
                android:id="@+id/takeoffPitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                custom:inc="0.5"
                custom:max="20"
                custom:min="0"
                custom:title="@string/takeoff_pitch"
                custom:unit="°" >
            </org.gcs.widgets.SeekBarWithText.SeekBarWithText>

            <org.gcs.widgets.SeekBarWithText.SeekBarWithText
                android:id="@+id/waypointAngle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                custom:inc="5"
                custom:max="360"
                custom:min="0"
                custom:title="@string/waypoint_angle"
                custom:unit="°" >
            </org.gcs.widgets.SeekBarWithText.SeekBarWithText>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waypointInfo_TakeOff" />

</LinearLayout>